Fixes cut off text in boxes

--- a/src/main/resources/view/MainWindow.css
+++ b/src/main/resources/view/MainWindow.css
@@ -21,6 +21,7 @@
 }
 
 .list-cell .label, #optionalFields .label {
+    -fx-wrap-text: "true";
     -fx-font-size: 13px;
 }
 
